--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport"viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>Mis Boletos • Graduación 2025</title>
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="1.png">
@@ -11,30 +11,24 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
-  <!-- PARTICLES.JS -->
+  <!-- PARTICULAS -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
   <style>
-    /* === PARTÍCULAS SIEMPRE AL 100% Y RESPONSIVE === */
+    /* Fuerza que el canvas de partículas siempre ocupe toda la pantalla */
     #particles-js {
       position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      width: 100vw;
-      height: 100vh;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
       z-index: -1;
       pointer-events: none;
     }
-
-    :root {
-      --blue-dark: #1e3a8a;
-      --blue-main: #3b82f6;
-      --white: #ffffff;
-      --black: #000000;
-      --gray: #f1f5f9;
-    }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
+      width: 100%;
       height: 100%;
+      margin: 0;
+      padding: 0;
       overflow-x: hidden;
     }
     body {
@@ -54,7 +48,6 @@
       50% { background-position: 100% 50%; } 
       100% { background-position: 0% 50%; } 
     }
-
     .container { 
       max-width: 500px; 
       width: 100%; 
@@ -66,8 +59,15 @@
       position: relative; 
       z-index: 1; 
     }
-
-    /* === TODO TU CSS ORIGINAL (sin tocar nada) === */
+    /* El resto de tus estilos sigue exactamente igual */
+    :root {
+      --blue-dark: #1e3a8a;
+      --blue-main: #3b82f6;
+      --white: #ffffff;
+      --black: #000000;
+      --gray: #f1f5f9;
+    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     .header {
       background: linear-gradient(135deg, #1e3a8a, #3b82f6);
       color: white;
@@ -160,138 +160,142 @@
     }
     #backButton { background: white; color: var(--blue-main); border: 2px solid var(--blue-main); }
     #backButton:hover { background: var(--blue-main); color: white; }
-
     @media (max-width: 480px) {
       select { width: 100%; margin: 10px 0; }
       #ticket { width: 95%; }
       .qr-container { width: 200px; height: 200px; }
       #qrCode { width: 160px; height: 160px; }
-      .container { border-radius: 20px; }
+      .content { padding: 30px 20px; }
     }
   </style>
-head>
+</head>
 <body>
 
-  <!-- PARTÍCULAS RESPONSIVE -->
-  <div id="particles-js">div>
+  <!-- PARTÍCULAS DE FONDO -->
+  <div id="particles-js"></div>
 
   <div class="container">
-    <!-- TODO TU HTML ORIGINAL (exactamente igual) -->
+    <!-- TODO TU HTML ORIGINAL (sin tocar nada) -->
     <div class="header">
       <img src="uni.png" alt="Universidad UNIVER MILENIUM Logo">
-      <h1>Graduación 2025h1>
-      <p id="welcome">Cargando...p>
-    div>
+      <h1>Graduación 2025</h1>
+      <p id="welcome">Cargando...</p>
+    </div>
     <div class="content" id="mainContent">
       <div class="profile">
-        <h3 id="userName">Axelh3>
-        <p>Mis boletos compradosp>
-      div>
+        <h3 id="userName">Axel</h3>
+        <p>Mis boletos comprados</p>
+      </div>
       <div class="inventory">
-        <div><h3>Boletos Cenah3><span id="dinnerAvailable">200span>div>
-        <div><h3>Boletos Ceremoniah3><span id="ceremonyAvailable">200span>div>
-      div>
+        <div><h3>Boletos Cena</h3><span id="dinnerAvailable">200</span></div>
+        <div><h3>Boletos Ceremonia</h3><span id="ceremonyAvailable">200</span></div>
+      </div>
       <div id="myPurchases">
         <div style="background:#dbeafe;padding:20px;border-radius:12px;text-align:center;">
-          <p>Cargando tus compras...p>
-        div>
-      div>
+          <p>Cargando tus compras...</p>
+        </div>
+      </div>
       <div class="option">
-        <h3>Paquete Completo • $3,000 MXNh3>
-        <p>2 boletos de cena + 2 de ceremoniap>
-        <button id="buyPackage">Comprar Paquetebutton>
-      div>
+        <h3>Paquete Completo • $3,000 MXN</h3>
+        <p>2 boletos de cena + 2 de ceremonia</p>
+        <button id="buyPackage">Comprar Paquete</button>
+      </div>
       <div class="option">
-        <h3>Boletos Individualesh3>
-        <p>Cena: <strong>$1,000strong> c/u • Ceremonia: <strong>$150strong> c/up>
+        <h3>Boletos Individuales</h3>
+        <p>Cena: <strong>$1,000</strong> c/u • Ceremonia: <strong>$150</strong> c/u</p>
         <select id="qtyDinner">
-          <option value="0">Cena: 0option>
-          <option value="1">Cena: 1 ($1,000)option>
-          <option value="2">Cena: 2 ($2,000)option>
-          <option value="3">Cena: 3 ($3,000)option>
-          <option value="4">Cena: 4 ($4,000)option>
-          <option value="5">Cena: 5 ($5,000)option>
-          <option value="6">Cena: 6 ($6,000)option>
-          <option value="7">Cena: 7 ($7,000)option>
-          <option value="8">Cena: 8 ($8,000)option>
-          <option value="9">Cena: 9 ($9,000)option>
-          <option value="10">Cena: 10 ($10,000)option>
-        select>
+          <option value="0">Cena: 0</option>
+          <option value="1">Cena: 1 ($1,000)</option>
+          <option value="2">Cena: 2 ($2,000)</option>
+          <option value="3">Cena: 3 ($3,000)</option>
+          <option value="4">Cena: 4 ($4,000)</option>
+          <option value="5">Cena: 5 ($5,000)</option>
+          <option value="6">Cena: 6 ($6,000)</option>
+          <option value="7">Cena: 7 ($7,000)</option>
+          <option value="8">Cena: 8 ($8,000)</option>
+          <option value="9">Cena: 9 ($9,000)</option>
+          <option value="10">Cena: 10 ($10,000)</option>
+        </select>
         <select id="qtyCeremony">
-          <option value="0">Ceremonia: 0option>
-          <option value="1">Ceremonia: 1 ($150)option>
-          <option value="2">Ceremonia: 2 ($300)option>
-          <option value="3">Ceremonia: 3 ($450)option>
-          <option value="4">Ceremonia: 4 ($600)option>
-          <option value="5">Ceremonia: 5 ($750)option>
-        select>
-        <div id="individualTotal">Total: $0 MXNdiv>
-        <button id="buyIndividual">Comprar Individualesbutton>
-      div>
-      <button class="ticket" id="goToTicket" style="display:none;">Ir a mi Ticketbutton>
-      <button class="delete" id="deleteLast" style="display:none;">Eliminar última comprabutton>
-      <div id="message" class="message">div>
-    div>
+          <option value="0">Ceremonia: 0</option>
+          <option value="1">Ceremonia: 1 ($150)</option>
+          <option value="2">Ceremonia: 2 ($300)</option>
+          <option value="3">Ceremonia: 3 ($450)</option>
+          <option value="4">Ceremonia: 4 ($600)</option>
+          <option value="5">Ceremonia: 5 ($750)</option>
+        </select>
+        <div id="individualTotal">Total: $0 MXN</div>
+        <button id="buyIndividual">Comprar Individuales</button>
+      </div>
+      <button class="ticket" id="goToTicket" style="display:none;">Ir a mi Ticket</button>
+      <button class="delete" id="deleteLast" style="display:none;">Eliminar última compra</button>
+      <div id="message" class="message"></div>
+    </div>
 
+    <!-- TICKET (igual que antes) -->
     <div id="ticket">
       <div class="ticket-title">
-        <img src="uni.png" alt="Universidad UNIVER MILENIUM Logo">
+        <img src="uni.png" alt="Logo">
         GRADUACIÓN 2025
-      div>
-      <div class="qr-container"><canvas id="qrCode">canvas>div>
-      <div class="ticket-code" id="ticketCode">XXXXXXXXXdiv>
+      </div>
+      <div class="qr-container"><canvas id="qrCode"></canvas></div>
+      <div class="ticket-code" id="ticketCode">XXXXXXXXX</div>
       <div class="ticket-info">
-        <div class="info-row"><span class="label">ALUMNOspan><span class="value" id="ticketNombre">span>div>
-        <div class="info-row"><span class="label">MATRÍCULAspan><span class="value" id="ticketMatricula">span>div>
-        <div class="info-row"><span class="label">FECHA COMPRAspan><span class="value" id="ticketFecha">span>div>
-        <div class="info-row"><span class="label">HORA COMPRAspan><span class="value" id="ticketHora">span>div>
-        <div class="info-row"><span class="label">BOLETOS TOTALESspan><span class="value" id="ticketBoletos">span>div>
-      div>
+        <div class="info-row"><span class="label">ALUMNO</span><span class="value" id="ticketNombre"></span></div>
+        <div class="info-row"><span class="label">MATRÍCULA</span><span class="value" id="ticketMatricula"></span></div>
+        <div class="info-row"><span class="label">FECHA COMPRA</span><span class="value" id="ticketFecha"></span></div>
+        <div class="info-row"><span class="label">HORA COMPRA</span><span class="value" id="ticketHora"></span></div>
+        <div class="info-row"><span class="label">BOLETOS TOTALES</span><span class="value" id="ticketBoletos"></span></div>
+      </div>
       <div class="footer-note">
         ¡Felicidades por tu graduación!<br>
-        Presenta este ticket en <strong>Cajastrong> para recoger tus boletos físicos
-      div>
-      <button class="download-btn" id="downloadTicket">Descargar Ticketbutton>
-      <button id="backButton">Regresarbutton>
-    div>
-  div>
+        Presenta este ticket en <strong>Caja</strong> para recoger tus boletos físicos
+      </div>
+      <button class="download-btn" id="downloadTicket">Descargar Ticket</button>
+      <button id="backButton">Regresar</button>
+    </div>
+  </div>
 
   <script>
-    /* === PARTÍCULAS 100% RESPONSIVE === */
-    particlesJS("particles-js", {
-      "particles": {
-        "number": { "value": 90, "density": { "enable": true, "value_area": 800 } },
-        "color": { "value": ["#ffffff", "#c0e8ff", "#60a5fa", "#93c5fd"] },
-        "shape": { "type": "circle" },
-        "opacity": { "value": 0.6, "random": true, "anim": { "enable": true, "speed": 1, "opacity_min": 0.2 } },
-        "size": { "value": 4, "random": true, "anim": { "enable": true, "speed": 2, "size_min": 0.1 } },
-        "line_linked": { "enable": false },
-        "move": {
-          "enable": true,
-          "speed": 1.8,
-          "direction": "none",
-          "random": true,
-          "straight": false,
-          "out_mode": "out"
+    // === PARTÍCULAS RESPONSIVAS ===
+    function initParticles() {
+      particlesJS("particles-js", {
+      particles: {
+        number: { value: window.innerWidth < 768 ? 40 : 80, density: { enable: true, value_area: 800 } },
+        color: { value: ["#ffffff", "#a5b4fc", "#60a5fa"] },
+        shape: { type: "circle" },
+        opacity: { value: 0.6, random: true, anim: { enable: true, speed: 1, opacity_min: 0.2 } },
+        size: { value: 4, random: true, anim: { enable: true, speed: 2, size_min: 0.1 } },
+        line_linked: { enable: false },
+        move: {
+          enable: true,
+          speed: 1.5,
+          direction: "none",
+          random: true,
+          straight: false,
+          out_mode: "out"
         }
       },
-      "interactivity": {
-        "detect_on": "window",
-        "events": {
-          "onhover": { "enable": true, "mode": "repulse" },
-          "onclick": { "enable": false },
-          "resize": true
+      interactivity: {
+        detect_on: "window",
+        events: {
+          onhover: { enable: true, mode: "repulse" },
+          resize: true
         }
       },
-      "retina_detect": true
+      retina_detect: true
     });
+    }
 
-    // Esto hace que las partículas se redibujen al cambiar tamaño/orientación
-    window.addEventListener('resize', function(){
+    // Iniciar partículas
+    initParticles();
+
+    // Reiniciar al cambiar tamaño/orientación (importantísimo en móviles)
+    window.addEventListener('resize', function() {
       pJSDom[0].pJS.fn.particlesRefresh();
     });
 
-    // TU SCRIPT ORIGINAL (sin tocar nada)
+    // Todo tu script original sigue aquí abajo sin tocar nada más...
     const userNombre = localStorage.getItem('currentUserNombre') || 'Alumno';
     const userMatricula = localStorage.getItem('currentUserMatricula') || '000000';
     const userId = localStorage.getItem('currentUserId');
@@ -334,17 +338,17 @@ head>
           totalCeremonia = compras.reduce((sum, c) => sum + (c.ceremonia || 0), 0);
           document.getElementById('myPurchases').innerHTML = `
             <div style="background:#dbeafe;padding:20px;border-radius:12px;text-align:center;">
-              <h3 style="color:#1e3a8a;">¡Ya tienes boletos!h3>
-              <p><strong>${totalCena} Cena + ${totalCeremonia} Ceremoniastrong>p>
-            div>
+              <h3 style="color:#1e3a8a;">¡Ya tienes boletos!</h3>
+              <p><strong>${totalCena} Cena + ${totalCeremonia} Ceremonia</strong></p>
+            </div>
           `;
           document.getElementById('goToTicket').style.display = 'block';
           document.getElementById('deleteLast').style.display = 'block';
         } else {
           document.getElementById('myPurchases').innerHTML = `
             <div style="background:#fef3cd;padding:20px;border-radius:12px;text-align:center;">
-              <p>Aún no has comprado boletosp>
-            div>
+              <p>Aún no has comprado boletos</p>
+            </div>
           `;
           document.getElementById('goToTicket').style.display = 'none';
           document.getElementById('deleteLast').style.display = 'none';
@@ -357,30 +361,30 @@ head>
     async function comprar(cena, ceremonia, total) {
       try {
         const codigo = Math.random().toString(36).substr(2, 9).toUpperCase();
-      const compra = { cena, ceremonia, total, codigo, fecha: new Date().toISOString() };
-      const res = await fetch(PURCHASES_URL, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(compra)
-      });
-      if (!res.ok) throw new Error("Error al guardar compra");
-      const inv = await (await fetch(INVENTORY_URL)).json() || {dinner: 200, ceremony: 200};
-      await fetch(INVENTORY_URL, {
-        method: 'PATCH',
-        body: JSON.stringify({
-          dinner: (inv.dinner || 200) - cena,
-          ceremony: (inv.ceremony || 200) - ceremonia
-        })
-      });
-      await loadData();
-      showMessage('¡Compra realizada con éxito!', 'success');
-      document.getElementById('qtyDinner').value = 0;
-      document.getElementById('qtyCeremony').value = 0;
-      calculateTotal();
-    } catch (err) {
-      console.error(err);
-      showMessage('Error al procesar la compra. Intenta de nuevo.', 'error');
-    }
+        const compra = { cena, ceremonia, total, codigo, fecha: new Date().toISOString() };
+        const res = await fetch(PURCHASES_URL, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(compra)
+        });
+        if (!res.ok) throw new Error("Error al guardar compra");
+        const inv = await (await fetch(INVENTORY_URL)).json() || {dinner: 200, ceremony: 200};
+        await fetch(INVENTORY_URL, {
+          method: 'PATCH',
+          body: JSON.stringify({
+            dinner: (inv.dinner || 200) - cena,
+            ceremony: (inv.ceremony || 200) - ceremonia
+          })
+        });
+        await loadData();
+        showMessage('¡Compra realizada con éxito!', 'success');
+        document.getElementById('qtyDinner').value = 0;
+        document.getElementById('qtyCeremony').value = 0;
+        calculateTotal();
+      } catch (err) {
+        console.error(err);
+        showMessage('Error al procesar la compra. Intenta de nuevo.', 'error');
+      }
     }
     document.getElementById('buyPackage').onclick = () => comprar(2, 2, 3000);
     document.getElementById('buyIndividual').onclick = () => {
@@ -446,6 +450,6 @@ head>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js').catch(() => {});
     }
-  script>
-body>
-html>
+  </script>
+</body>
+</html>
