--- a/index.html
+++ b/index.html
@@ -317,14 +317,15 @@
           <label>Carrera</label>
           <select id="loginCarrera" required>
        <option value="">Selecciona tu carrera</option>
+            <option value="">Selecciona tu carrera</option>
             <option value="Ingeniería en Sistemas">Ingeniería en Sistemas</option>
-            <option value="Ingeniería Industrial">Pedagogía</option>
-            <option value="Ingeniería Civil">Administración de Empresas</option>
-            <option value="Arquitectura">Comunicación</option>
+            <option value="Pedagogía">Pedagogía</option>
+            <option value="Administración de Empresas">Administración de Empresas</option>
+            <option value="Comunicación">Comunicación</option>
             <option value="Derecho">Derecho</option>
-            <option value="Medicina">Comercio Internacional y Aduanas</option>
+            <option value="Comercio Internacional y Aduanas">Comercio Internacional y Aduanas</option>
             <option value="Psicología">Psicología</option>
-            <option value="Administración">Mercadoctenia</option>
+            <option value="Mercadoctenia">Mercadoctenia</option>
             <option value="Contaduría">Contaduría</option>
             <option value="Otra">Otra</option>
           </select>
