--- a/verificar.html
+++ b/verificar.html
@@ -6,7 +6,7 @@
   <title>Verificación Oficial • Graduación 2025</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Bebas+Neue&display=swap" rel="stylesheet">
   
-  <!-- Solo esto es nuevo: fondo bonito -->
+  <!--fondo "atractivo visualmente " -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <style>
     #particles-js {
@@ -52,7 +52,6 @@
     </div>
   </div>
 
-  <!-- TU CSS ORIGINAL (sin tocar nada) -->
   <style>
     :root {
       --blue-dark: #1e3a8a;
@@ -183,7 +182,6 @@
   </style>
 
   <script>
-    // FONDO ESTRELLAS (no afecta tu código)
     particlesJS("particles-js", {
       "particles": {
         "number": {"value": 180},
